<resources>
    <string name="app_name">Octopus Trivia</string>
    <string name="greeting_header">What do you know about the octopus?</string>
    <string name="welcome_directions">Answer each question below and click \"Check Me!\" to submit your answers.</string>
    <string name="question_1">An octopus has three hearts</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>
    <string name="question_2">The plural form of the word octopus is</string>
    <string name="answer_2_choice_1">octopodes</string>
    <string name="answer_2_choice_2">octopi</string>
    <string name="answer_2_choice_3">octopuses</string>
    <string name="question_3">Which of the following is(are) true about the octopus?</string>
    <string name="answer_3_choice_1">The octopus has eight tentacles</string>
    <string name="answer_3_choice_2">The octopus can smell with its arms</string>
    <string name="answer_3_choice_3">Severed arms can jerk away in pain when researches pinch them</string>
    <string name="answer_3_choice_4">Like starfish, a severed octopus arm can regrow another octopus</string>
    <string name="question_4">The octopus is the most intelligent invertebrate, and has been known to</string>
    <string name="answer_4_choice_1">open jars from the inside out</string>
    <string name="answer_4_choice_2">overpower lab assistants and tie them up with rope</string>
    <string name="answer_4_choice_3">build electric cars on the assembly line</string>
    <string name="answer_4_choice_4">build rock fortresses to protect themselves while they sleep</string>
    <string name="not_answer_one">No, technically they have 8 arms with suckers along most of their length. Tentacles only have suckers on the ends.</string>
    <string name="not_answer_four">No, but that would be cool! It can regrow an arm, but not an entire octopus.</string>
    <string name="not_answer_two">No, but they have been known to recognize and shoot water at people they didn\'t like!</string>
    <string name="not_answer_three">No, but they have been known to make tools out of coconuts!</string>
    <string name="is_answer">Good job!</string>
    <string name="question_5">Optional: What color would your pet octopus be??</string>
    <string name="question_5_text_field_hint">Example: purple </string>
    <string name="submit_answers_button_text">Check Me!</string>
</resources>
